[package]
name = "libp2p-workshop-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.9.0"
futures = "0.3"
log = "0.4"
anyhow = "1.0.70"
libp2p = { version = "0.51.3", features = ["async-std", "yamux", "tcp", "noise", "ping", "dns", "macros", "identify"] }
